# task-manager

./: .env.example  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  db.py  deps.py  security.py
app/models/: user.py
app/schemas/: __init__.py  user.py
app/services/: user_service.py
migration/: env.py
migration/versions/: 043c5d3fbe9f_add_last_name_to_users.py  9c4bd687858d_initial_revision.py  c889fe1e3267_initial_migration.py
